--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>heypiotr ... aka Piotr Krawiec</title>
 <meta charset="utf-8">
+<meta name=viewport content="width=device-width, initial-scale=1">
 <link href="favicon.png" rel="icon" type="image/png">
 <link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet' type='text/css'>
 <link href="styles.css" rel="stylesheet" type="text/css">
