Don't zoom in by default

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>heypiotr ... aka Piotr Krawiec</title>
 <meta charset="utf-8">
-<meta name=viewport content="width=450, initial-scale=1">
+<meta name=viewport content="width=450">
 <link href="favicon.png" rel="icon" type="image/png">
 <link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet' type='text/css'>
 <link href="styles.css" rel="stylesheet" type="text/css">
