--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name=viewport content="width=450">
 <link href="favicon.png" rel="icon" type="image/png">
-<link href='http://fonts.googleapis.com/css?family=Fresca' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Fresca' rel='stylesheet' type='text/css'>
 <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
